Adding setup files and executable files

--- a/conf/train.conf
+++ b/conf/train.conf
@@ -1,6 +1,3 @@
-# model
-model = "Bert"
-
 # training_type
 training_type = "mix"
 
@@ -8,16 +5,17 @@ training_type = "mix"
 template_type = "ptuning"
 
 # Data
+dataset = "go_emotions"
 data_condition = "fewshot"
-num_examples_per_label_ = 50
+num_examples_per_label = 50
 
 # zero-shot
 few_shot_train = True
 
 # train
+model = "BERT"
 model_lr = 2e-5
 template_lr = 1e-3
-dataset = "go_emotions"
 epoch_num = 3
 batch_size = 8
 use_cuda = True
